Hide solution on problem page

--- a/app/views/problems/_problem.html.erb
+++ b/app/views/problems/_problem.html.erb
@@ -9,10 +9,10 @@
     <%= problem.hand %>
   </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Solution:</strong>
-    <%= problem.solution %>
-  </p>
+<!--  <p id="solution" class="my-5">-->
+<!--    <strong class="block font-medium mb-1">Solution:</strong>-->
+    <%#= problem.solution %>
+<!--  </p>-->
 
   <p class="my-5">
     <strong class="block font-medium mb-1">Explanation:</strong>
