--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+    background: #006e4a;
+}
+
+.tile {
+    background-image: url('tiles/Front.svg')
+}
