Display message after solving

--- a/app/views/problems/_problem.html.erb
+++ b/app/views/problems/_problem.html.erb
@@ -1,22 +1,11 @@
 <div id="<%= dom_id problem %>">
   <p class="my-5">
-    <strong class="block font-medium mb-1">Title:</strong>
-    <%= problem.title %>
+    <strong class="text-center block font-medium mb-1"><%= problem.title %></strong>
   </p>
 
   <div class="flex flex-initial w-4/5 mx-auto gap-0.5">
     <%= display_clickable_tiles(problem.tiles, ' hover:bottom-5 relative ', problem) %>
   </div>
-
-<!--  <p id="solution" class="my-5">-->
-<!--    <strong class="block font-medium mb-1">Solution:</strong>-->
-    <%#= problem.solution %>
-<!--  </p>-->
-
-<!--  <p class="my-5">-->
-<!--    <strong class="block font-medium mb-1">Explanation:</strong>-->
-    <%#= display_tiles(problem.explanation, 'w-5') %>
-<!--  </p>-->
 
   <% if action_name != "show" %>
     <%= link_to "Show this problem", problem, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
