--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -1,15 +1,30 @@
 <div class="mx-auto md:w-2/3 w-full flex">
   <div class="mx-auto">
-    <% if notice.present? %>
-      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-    <% end %>
-
     <%= render @problem %>
 
+    <% unless @solved.nil? %>
+
+      <p id="solved-message">
+        <% if @solved %>
+          Correct answer!
+        <% else %>
+          Incorrect answer
+        <% end %>
+      </p>
+
+      <p id="solution" class="my-5">
+        <strong class="block font-medium mb-1">Solution:</strong>
+        <%= display_tiles(@problem.solution, 'w-10') %>
+      </p>
+
+      <p class="my-5">
+        <strong class="block font-medium mb-1">Explanation:</strong>
+        <%= display_tiles(@problem.explanation, 'w-7') %>
+      </p>
+
+    <% end %>
+
     <%= link_to "Edit this problem", edit_problem_path(@problem), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this problem", problem_path(@problem), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-    </div>
     <%= link_to "Back to problems", problems_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
 </div>
