--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,10 @@
           <div class="flash <%= key %>"><%= value %></div>
         <% end %>
       </div>
-      <% if signed_in? %>
-        Signed in as: <%= current_user.email %>
-        <%= button_to 'Sign out', sign_out_path, method: :delete %>
+      <% if authenticated? %>
+        <%= button_to "Sign Out", session_path, method: :delete  %>
       <% else %>
-        <%= link_to 'Sign in', sign_in_path %>
+        <%= link_to "Sign In", new_session_path %>
       <% end %>
       <%= yield %>
     </main>
