--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
-      <% if authenticated? %>
-        <%= button_to "Sign Out", session_path, method: :delete  %>
-      <% else %>
-        <%= link_to "Sign In", new_session_path %>
-      <% end %>
+      <div id="flash">
+        <% flash.each do |key, value| %>
+          <div class="flash <%= key %>"><%= value %></div>
+        <% end %>
+      </div>
       <%= yield %>
     </main>
   </body>
