--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,24 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <nav class="bg-gray-800 text-white p-4">
+      <div class="container mx-auto flex justify-between items-center">
+        <div class="flex items-center">
+          <%= link_to "WWYD App", root_path, class: "text-xl font-bold" %>
+        </div>
+        <div class="flex items-center space-x-4">
+          <% if Current.user %>
+            <span class="text-gray-300"><%= Current.user.email_address %></span>
+            <%= button_to "Sign out", session_path, method: :delete, class: "bg-red-600 hover:bg-red-500 text-white px-3 py-1 rounded" %>
+          <% else %>
+            <%= link_to "Sign in", new_session_path, class: "text-gray-300 hover:text-white" %>
+            <%= link_to "Sign up", new_user_path, class: "bg-blue-600 hover:bg-blue-500 text-white px-3 py-1 rounded" %>
+          <% end %>
+        </div>
+      </div>
+    </nav>
+
+    <main class="container mx-auto mt-10 px-5 flex">
       <%= yield %>
     </main>
   </body>
