--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
             <span class="text-gray-300"><%= Current.user.email_address %></span>
             <%= button_to "Sign out", session_path, method: :delete, class: "bg-red-600 hover:bg-red-500 text-white px-3 py-1 rounded" %>
           <% else %>
-            <%= link_to "Sign in", new_session_path, class: "text-gray-300 hover:text-white" %>
-            <%= link_to "Sign up", new_user_path, class: "bg-blue-600 hover:bg-blue-500 text-white px-3 py-1 rounded" %>
+            <%= link_to "Sign in", new_session_path, class: "text-gray-300 hover:text-white" unless current_page?(new_session_path)%>
+            <%= link_to "Sign up", new_user_path, class: "bg-blue-600 hover:bg-blue-500 text-white px-3 py-1 rounded" unless current_page?(new_user_path)%>
           <% end %>
         </div>
       </div>
