Refactor to use Tile

--- a/app/views/problems/_problem.html.erb
+++ b/app/views/problems/_problem.html.erb
@@ -4,7 +4,7 @@
   </p>
 
   <div class="flex flex-initial mx-auto gap-0.5">
-    <%= display_tiles(problem.tiles, 'w-10') %>
+    <%= display_tiles(problem.hand_tiles_to_s, 'w-10') %>
   </div>
 
   <% if action_name != "show" %>
