--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -10,9 +10,9 @@
       </p>
       <div class="flex flex-initial gap-0.5 mb-1">
         <% if @solve.nil? %>
-          <%= display_clickable_tiles(@problem.tiles, 'hover:bottom-5 relative', @problem) %>
+          <%= display_clickable_tiles(@problem.hand_tiles_to_s, 'hover:bottom-5 relative', @problem) %>
         <% else %>
-          <%= display_tiles_divs(@problem.tiles) %>
+          <%= display_tiles_divs(@problem.hand_tiles_to_s) %>
         <% end %>
       </div>
 
@@ -33,7 +33,7 @@
       <div class="my-5">
         <strong class="block font-medium mb-1">Solution:</strong>
         <p id="solution">
-          <%= display_tiles(@problem.solution_tiles, 'w-10') %>
+          <%= display_tiles(@problem.solution_tiles_to_s, 'w-10') %>
         </p>
       </div>
 
