--- a/app/views/problems/_form.html.erb
+++ b/app/views/problems/_form.html.erb
@@ -17,13 +17,13 @@
   </div>
 
   <div class="my-5">
-    <%= form.label :hand %>
-    <%= form.text_field :hand, class: "block shadow-sm rounded-md border border-gray-200 outline-hidden px-3 py-2 mt-2 w-full" %>
+    <%= form.label :hand_notation %>
+    <%= form.text_field :hand_notation, class: "block shadow-sm rounded-md border border-gray-200 outline-hidden px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :solution %>
-    <%= form.text_field :solution, class: "block shadow-sm rounded-md border border-gray-200 outline-hidden px-3 py-2 mt-2 w-full" %>
+    <%= form.label :solution_notation %>
+    <%= form.text_field :solution_notation, class: "block shadow-sm rounded-md border border-gray-200 outline-hidden px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
