Rename Solve fields

--- a/app/views/solves/_solve.html.erb
+++ b/app/views/solves/_solve.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id solve %>">
   <p class="my-5">
-    <strong class="block font-medium mb-1">Tile:</strong>
-    <%= solve.tile %>
+    <strong class="block font-medium mb-1">Tile Notation:</strong>
+    <%= solve.tile_notation %>
   </p>
 
   <p class="my-5">
