--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -24,9 +24,9 @@
       <div class="text-center bg-gray-200 rounded-lg w-1/2 mx-auto">
         <p id="solved-message">
           <% if @solved_successfully %>
-            <span data-testid="solve-tile"><%= @solve.tile %></span>: Correct answer!
+            <span data-testid="solve-tile"><%= @solve.tile_notation %></span>: Correct answer!
           <% else %>
-            <span data-testid="solve-tile"><%= @solve.tile %></span>: Incorrect answer
+            <span data-testid="solve-tile"><%= @solve.tile_notation %></span>: Incorrect answer
           <% end %>
         </p>
       </div>
