--- a/app/views/solves/_form.html.erb
+++ b/app/views/solves/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :tile %>
-    <%= form.text_field :tile, class: "block shadow-sm rounded-md border border-gray-200 outline-hidden px-3 py-2 mt-2 w-full" %>
+    <%= form.label :tile_notation %>
+    <%= form.text_field :tile_notation, class: "block shadow-sm rounded-md border border-gray-200 outline-hidden px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
